Fixed projectSction and navBar x Overflow

--- a/gatsby-starter-default/src/components/colors.scss
+++ b/gatsby-starter-default/src/components/colors.scss
@@ -1,6 +1,6 @@
 $light-background: rgb(221, 221, 221);
 $light-shadow-neg:rgb(160, 160, 160);
-$light-shadow-pos: rgb(235, 235, 235);
+$light-shadow-pos: rgba(235, 235, 235, 0.575);
 $light-primary-background: rgba(7, 0, 17, 0.61);
 $light-primary: rgb(111, 0, 255);
 
